# CEIA_Analisis_de_datos_Trabajo_individual_Denis_Zhbankov

./: .gitignore  README.md  justfile  pyproject.toml
src/: main.ipynb
