[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[project]
dependencies = [
    "geodatasets>=2026.5.0",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
name = "CEIA_Analisis_de_datos_Trabajo_individual_Denis_Zhbankov"
requires-python = ">=3.14"
version = "0.1.0"

[tool.ruff.format]
preview = true

[tool.ty.environment]
python = ".venv"
